force-app/main/default/objects/LT_Monthly_Billing__c/LT_Monthly_Billing__c.object-meta.xml
<CustomObject>
    <description>Fechamento mensal do embarcador: volume postado e entregue, preço aplicado, ajustes, valor líquido e nota fiscal. Detail de Conta.</description>
    <label>Faturamento Mensal</label>
    <nameField>
        <displayFormat>FAT-{00000}</displayFormat>
        <label>Código do Faturamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Faturamentos Mensais</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>