force-app/main/default/objects/LT_Monthly_Billing__c/fields/LT_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>LT_Adjustments__c</fullName>
    <description>Ajustes do mes: descontos (negativo) ou acrescimos (positivo) sobre o valor bruto.</description>
    <label>Ajustes</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>