force-app/main/default/objects/LT_Monthly_Billing__c/fields/LT_Agreement__c.field-meta.xml
<CustomField>
    <fullName>LT_Agreement__c</fullName>
    <description>Contrato comercial vigente que baliza este faturamento.</description>
    <label>Contrato Comercial</label>
    <referenceTo>LT_Commercial_Agreement__c</referenceTo>
    <relationshipLabel>Faturamentos Mensais</relationshipLabel>
    <relationshipName>LT_Monthly_Billings</relationshipName>
    <type>Lookup</type>
</CustomField>