force-app/main/default/objects/LT_Monthly_Billing__c/fields/LT_Billing_Is_Open__c.field-meta.xml
<CustomField>
    <fullName>LT_Billing_Is_Open__c</fullName>
    <description>Verdadeiro enquanto o faturamento do mes ainda esta em apuracao ou fechado (nao faturado).</description>
    <label>Faturamento em Aberto</label>
    <formula>OR(ISPICKVAL(LT_Billing_Status__c, "Em Apuracao"), ISPICKVAL(LT_Billing_Status__c, "Fechado"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>