force-app/main/default/objects/LT_Monthly_Billing__c/fields/LT_Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>LT_Billing_Status__c</fullName>
    <description>Etapa do ciclo de faturamento do mes.</description>
    <label>Status do Faturamento</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Em Apuracao</fullName><default>true</default><label>Em Apuracao</label></value>
            <value><fullName>Fechado</fullName><default>false</default><label>Fechado</label></value>
            <value><fullName>Faturado</fullName><default>false</default><label>Faturado</label></value>
            <value><fullName>Pago</fullName><default>false</default><label>Pago</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>