force-app/main/default/objects/LT_Monthly_Billing__c/fields/LT_Counts_As_Billed__c.field-meta.xml
<CustomField>
    <fullName>LT_Counts_As_Billed__c</fullName>
    <description>Verdadeiro quando o faturamento ja foi faturado ou pago (entra nos totais consolidados da conta).</description>
    <formula>OR(ISPICKVAL(LT_Billing_Status__c, &quot;Faturado&quot;), ISPICKVAL(LT_Billing_Status__c, &quot;Pago&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conta como Faturado</label>
    <type>Checkbox</type>
</CustomField>