force-app/main/default/objects/LT_Monthly_Billing__c/fields/LT_Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>LT_Gross_Amount__c</fullName>
    <description>Valor bruto do mes: Pacotes Entregues x Preco por Pacote.</description>
    <label>Valor Bruto</label>
    <formula>BLANKVALUE(LT_Packages_Delivered__c, 0) * BLANKVALUE(LT_Price_Per_Package__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>