force-app/main/default/objects/LT_Monthly_Billing__c/fields/LT_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>LT_Invoice_Number__c</fullName>
    <description>Numero da Nota Fiscal emitida para o embarcador referente ao mes.</description>
    <label>Numero da Nota Fiscal</label>
    <length>30</length>
    <type>Text</type>
</CustomField>