force-app/main/default/objects/LT_Monthly_Billing__c/fields/LT_Month_Key__c.field-meta.xml
<CustomField>
    <fullName>LT_Month_Key__c</fullName>
    <description>Chave tecnica Embarcador + mes de competencia. Impede dois faturamentos do mesmo embarcador no mesmo mes.</description>
    <externalId>true</externalId>
    <label>Chave Unica Embarcador-Mes</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>