force-app/main/default/objects/LT_Monthly_Billing__c/fields/LT_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>LT_Net_Amount__c</fullName>
    <description>Valor liquido a faturar: Valor Bruto + Ajustes.</description>
    <label>Valor Liquido</label>
    <formula>LT_Gross_Amount__c + BLANKVALUE(LT_Adjustments__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>