force-app/main/default/objects/LT_Monthly_Billing__c/fields/LT_Packages_Delivered__c.field-meta.xml
<CustomField>
    <fullName>LT_Packages_Delivered__c</fullName>
    <description>Total de pacotes do embarcador efetivamente entregues no mes (base de calculo).</description>
    <label>Pacotes Entregues</label>
    <precision>9</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>