force-app/main/default/objects/LT_Monthly_Billing__c/fields/LT_Packages_Shipped__c.field-meta.xml
<CustomField>
    <fullName>LT_Packages_Shipped__c</fullName>
    <description>Total de pacotes que o embarcador postou no mes.</description>
    <label>Pacotes Postados</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>