force-app/main/default/objects/LT_Monthly_Billing__c/fields/LT_Price_Per_Package__c.field-meta.xml
<CustomField>
    <fullName>LT_Price_Per_Package__c</fullName>
    <description>Preco por pacote aplicado no mes (copia do contrato no fechamento).</description>
    <label>Preco por Pacote</label>
    <precision>8</precision>
    <scale>2</scale>
    <required>true</required>
    <type>Currency</type>
</CustomField>