force-app/main/default/objects/LT_Monthly_Billing__c/fields/LT_Reference_Label__c.field-meta.xml
<CustomField>
    <fullName>LT_Reference_Label__c</fullName>
    <description>Rotulo do mes de competencia no formato MM/AAAA.</description>
    <formula>IF(ISBLANK(LT_Reference_Month__c), "", RIGHT("00" &amp; TEXT(MONTH(LT_Reference_Month__c)), 2) &amp; "/" &amp; TEXT(YEAR(LT_Reference_Month__c)))</formula>
    <label>Competencia</label>
    <type>Text</type>
</CustomField>