force-app/main/default/objects/LT_Monthly_Billing__c/fields/LT_Reference_Month__c.field-meta.xml
<CustomField>
    <fullName>LT_Reference_Month__c</fullName>
    <description>Mes de competencia do faturamento (usar sempre o primeiro dia do mes).</description>
    <inlineHelpText>Informe o primeiro dia do mes de competencia (ex.: 01/03/2025).</inlineHelpText>
    <label>Mes de Referencia</label>
    <required>true</required>
    <type>Date</type>
</CustomField>