force-app/main/default/objects/LT_Monthly_Billing__c/fields/LT_Shipper__c.field-meta.xml
<CustomField>
    <fullName>LT_Shipper__c</fullName>
    <description>Embarcador (Conta) ao qual este faturamento mensal pertence.</description>
    <label>Embarcador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Faturamentos Mensais</relationshipLabel>
    <relationshipName>LT_Monthly_Billings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>