force-app/main/default/objects/LT_Monthly_Billing__c/validationRules/LT_Billing_Block_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Billing_Block_Negative</fullName>
    <active>true</active>
    <description>Volumes e preco do faturamento nao podem ser negativos.</description>
    <errorConditionFormula>OR( LT_Packages_Shipped__c &lt; 0, LT_Packages_Delivered__c &lt; 0, LT_Price_Per_Package__c &lt; 0 )</errorConditionFormula>
    <errorMessage>Pacotes e preco por pacote nao podem ser negativos.</errorMessage>
</ValidationRule>