force-app/main/default/objects/LT_Monthly_Billing__c/validationRules/LT_Billing_Delivered_Not_Above_Shipped.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Billing_Delivered_Not_Above_Shipped</fullName>
    <active>true</active>
    <description>Pacotes entregues nao pode exceder pacotes postados.</description>
    <errorConditionFormula>LT_Packages_Delivered__c &gt; LT_Packages_Shipped__c</errorConditionFormula>
    <errorDisplayField>LT_Packages_Delivered__c</errorDisplayField>
    <errorMessage>Pacotes Entregues nao pode ser maior que Pacotes Postados.</errorMessage>
</ValidationRule>