force-app/main/default/objects/LT_Monthly_Billing__c/validationRules/LT_Billing_Future_Month_Block.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Billing_Future_Month_Block</fullName>
    <active>true</active>
    <description>Nao e possivel criar faturamento para meses futuros.</description>
    <errorConditionFormula>LT_Reference_Month__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>LT_Reference_Month__c</errorDisplayField>
    <errorMessage>O Mes de Referencia nao pode ser um mes futuro.</errorMessage>
</ValidationRule>