force-app/main/default/objects/LT_Monthly_Billing__c/validationRules/LT_Billing_Reference_Is_First_Of_Month.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Billing_Reference_Is_First_Of_Month</fullName>
    <active>true</active>
    <description>O mes de referencia deve ser sempre o primeiro dia do mes.</description>
    <errorConditionFormula>AND( NOT(ISBLANK(LT_Reference_Month__c)), DAY(LT_Reference_Month__c) &lt;&gt; 1 )</errorConditionFormula>
    <errorDisplayField>LT_Reference_Month__c</errorDisplayField>
    <errorMessage>Use sempre o primeiro dia do mes no campo Mes de Referencia (ex.: 01/03/2025).</errorMessage>
</ValidationRule>