force-app/main/default/objects/LT_Monthly_Billing__c/listViews/Em_Aberto.listView-meta.xml
<ListView>
    <fullName>Em_Aberto</fullName>
    <columns>NAME</columns>
    <columns>LT_Shipper__c</columns>
    <columns>LT_Reference_Label__c</columns>
    <columns>LT_Billing_Status__c</columns>
    <columns>LT_Packages_Delivered__c</columns>
    <columns>LT_Net_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LT_Billing_Is_Open__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Faturamentos em Aberto</label>
</ListView>